--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -8,10 +8,7 @@
       <h1><%= link_to "The Teen Magazine", root_path %></h1>
       <!-- Social buttons -->
       <div class="social-media-footer">
-        <a class="link" href="https://www.facebook.com/theteenmagazinee/" target="_blank"><i class="fab fa-sm fa-facebook-f"></i></a>
-        <a class="link" href="https://www.pinterest.com/theteenmagazine_/" target="_blank"><i class="fab fa-sm fa-pinterest"></i></a>
-        <a class="link" href="https://twitter.com/TheTeenMagazin_" target="_blank"><i class="fab fa-sm fa-twitter"></i></a>
-        <a class="link" href="https://www.instagram.com/theteenmagazine_" target="_blank"><i class="fab fa-sm fa-instagram"></i></a>
+        <%= render "layouts/partials/social_media" %>
       </div>
       <!-- Social buttons -->
     </div>
