--- a/app/views/layouts/partials/_header.html.erb
+++ b/app/views/layouts/partials/_header.html.erb
@@ -1,6 +1,8 @@
 <header id="main_navigation" class="clearfix header-navigation">
   <div id="banner" class="banner-relative">
-    <i class="fa fa-bars toggle-nav" onclick="toggleNav();"></i>
+    <div class="flex-1">
+      <svg width="20px" height="20px" onclick="toggleNav();" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" class="toggle-nav svg-inline--fa fa-bars fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path></svg>
+    </div>
     <a id="name_wrapper" href="/">
       <picture>
         <source srcset="<%= image_url('teenmag.png') %>" media="(min-width: 800px)">
@@ -8,11 +10,7 @@
       </picture>
     </a>
     <div class="social-media">
-      <a class="link" href="https://www.facebook.com/theteenmagazinee/" target="_blank"><i class="fab fa-sm fa-facebook-f"></i></a>
-      <a class="link" href="https://www.pinterest.com/theteenmagazine_/" target="_blank"><i class="fab fa-sm fa-pinterest"></i></a>
-      <a class="link" href="https://twitter.com/TheTeenMagazin_" target="_blank"><i class="fab fa-sm fa-twitter"></i></a>
-      <a class="link" href="https://www.instagram.com/theteenmagazine_" target="_blank"><i class="fab fa-sm fa-instagram"></i></a>
-      <a href="/search"><i class="fa fa-search" aria-hidden="true"></i></a>
+      <%= render "layouts/partials/social_media" %>
     </div>
   </div>
   <div class="border">
