--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -292,9 +292,9 @@
       .website_link {
         display: inline-block;
       }
-      a, p {
+      svg, p {
         color: #4ABEB6;
-        margin: 0 !important;
+        margin: 0 2px 0 0 !important;
         span {
           color: black;
         }
@@ -355,7 +355,6 @@
       max-width: 1000px;
       margin-top: 10px;
       .flex--profile {
-        pointer-events: none;
         z-index:1;
         opacity: 0.4;
         background-color: transparent;
