--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -10,7 +10,7 @@
               <% end %>
               <%= form_for(:search, method: :get, :html => {:class => 'form-inline d-flex  justify-content-left md-form form-sm active-theme-2 mt-2', style: "flex: 1;"}) do |f| %>
                 <%= button_tag(class: "btn_no_style", name: "filter", value: @next) do %>
-                  <i class="fa fa-angle-right" aria-hidden="true"></i>
+                  <svg width="40px" height="40px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-right" class="svg-inline--fa fa-angle-right fa-w-8 mb-2" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><path fill="currentColor" d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"></path></svg>
                 <% end %>
               <% end %>
             </div>
