--- a/app/views/pitches/edit.html.erb
+++ b/app/views/pitches/edit.html.erb
@@ -3,7 +3,7 @@
   <% if (current_user.editor?) && (@pitch.status.eql? "Ready for Review") %>
     <%= render "/pitches/review_pitch" %>
   <% else %>
-    <h1 class="d-inline">Edit Pitch</h1><a data-toggle="tooltip" target="_blank" title="See pitch requirements" class="ml-1 position-absolute" href="/choosing-a-topic"><i class="fad fa-info-circle"></i></a>
+    <h1 class="d-inline">Edit Pitch</h1><a data-toggle="tooltip" target="_blank" title="See pitch requirements" class="ml-1 position-absolute" href="/choosing-a-topic"><svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="fad" data-icon="info-circle" class="mb-1 svg-inline--fa fa-info-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><g class="fa-group"><path class="fa-secondary" fill="currentColor" d="M256 8C119 8 8 119.08 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 110a42 42 0 1 1-42 42 42 42 0 0 1 42-42zm56 254a12 12 0 0 1-12 12h-88a12 12 0 0 1-12-12v-24a12 12 0 0 1 12-12h12v-64h-12a12 12 0 0 1-12-12v-24a12 12 0 0 1 12-12h64a12 12 0 0 1 12 12v100h12a12 12 0 0 1 12 12z" opacity="0.4"></path><path class="fa-primary" fill="currentColor" d="M256 202a42 42 0 1 0-42-42 42 42 0 0 0 42 42zm44 134h-12V236a12 12 0 0 0-12-12h-64a12 12 0 0 0-12 12v24a12 12 0 0 0 12 12h12v64h-12a12 12 0 0 0-12 12v24a12 12 0 0 0 12 12h88a12 12 0 0 0 12-12v-24a12 12 0 0 0-12-12z"></path></g></svg></a>
     <%= render "/pitches/form" %>
     <%= link_to "Delete", pitch_path(@pitch), method: :delete, data: {confirm: "Are you sure you want to delete this pitch? This cannot be undone."}, :class => "link_theme delete_btn" %>
   <% end %>
