--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -43,33 +43,13 @@ blockquote {
             </div>
             <div class="right_side_wrapper <% if @authors.count == 1 %>right_side_flex<% end %>">
               <div class="date_wrapper published">
-                <p><i class="fa fa-clock-o" style="margin-right: 3px;" aria-hidden="true"></i><p>
+                <p>
+                  <svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="far" data-icon="clock" class="mr-1 mb-1 svg-inline--fa fa-clock fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"></path></svg>
+                </p>
                 <p class="date"><%= @date.strftime('%A, %B %d')%></p>
               </div>
               <div class="social_icons">
-                <a class="fb-share" href="//www.facebook.com/v2.3/dialog/feed?app_id=1190455601051741
-                  &name=<%= @post.title.sub! '#', '' %>
-                  &description=<%= @post.meta_description %>
-                  &link=http://www.theteenmagazine.com/<%= @post.slug %>">
-                  <div>
-                    <i class="fab fa-facebook-f"></i>
-                  </div>
-                </a>
-                <a class="js-share-twitter-link" href="https://www.twitter.com/share?url=https://www.theteenmagazine.com/<%= @post.slug %>&text=<%= @post.title %> &via=theteenmagazin_" >
-                  <div style="background-color: #55ACEE">
-                    <i class="fab fa-twitter"></i>
-                  </div>
-                </a>
-                <a class="js-share-pinterest-link" href="//pinterest.com/pin/create/button/?url=http://www.theteenmagazine.com/<%=@post.slug%>&media=<%= @post.thumbnail.url(:large)%>&description=<%= @post.title %>  - TheTeenMagazine.com">
-                 <div style="background-color: #cb2027">
-                   <i aria-hidden="true" class="fab fa-pinterest"></i>
-                 </div>
-                </a>
-                <a title="Email" href="mailto:?subject=<%= @post.title %>&body=http://www.theteenmagazine.com/<%= @post.slug %>" target="_top">
-                 <div  style="background-color: #333">
-                   <i class="fas fa-paper-plane"></i>
-                 </div>
-               </a>
+                <%= render "posts/partials/share_social" %>
               </div>
             </div>
           </div>
@@ -82,29 +62,7 @@ blockquote {
               </div>
               <p class="mt-0 mb-4"><i>Did you enjoy reading <%= @post.user.full_name %>'s article? Let your friends know by using any of the sharing options below.</i></p>
               <div class="social_icons social_icons_full">
-                <a class="fb-share" href="//www.facebook.com/v2.3/dialog/feed?app_id=1190455601051741
-                  &name=<%= @post.title.sub! '#', '' %>
-                  &description=<%= @post.meta_description %>
-                  &link=http://www.theteenmagazine.com/<%= @post.slug %>">
-                  <div>
-                    <i class="fab fa-facebook-f"></i>
-                  </div>
-                </a>
-                <a class="js-share-twitter-link" href="https://www.twitter.com/share?url=https://www.theteenmagazine.com/<%= @post.slug %>&text=<%= @post.title %> &via=theteenmagazin_" >
-                  <div style="background-color: #55ACEE">
-                    <i class="fab fa-twitter"></i>
-                  </div>
-                </a>
-                <a class="js-share-pinterest-link" href="//pinterest.com/pin/create/button/?url=http://www.theteenmagazine.com/<%=@post.slug%>&media=<%= @post.thumbnail.url(:large)%>&description=<%= @post.title %>  - TheTeenMagazine.com">
-                 <div style="background-color: #cb2027">
-                   <i class="fab fa-pinterest"></i>
-                 </div>
-                </a>
-                <a title="Email" href="mailto:?subject=<%= @post.title %>&body=http://www.theteenmagazine.com/<%= @post.slug %>" target="_top">
-                 <div  style="background-color: #333">
-                   <i class="fas fa-paper-plane"></i>
-                 </div>
-               </a>
+                <%= render "posts/partials/share_social" %>
               </div>
               <% if current_user && (current_user.id == @post.user_id || (@post.collaboration&.include? current_user.email) || current_user.admin?) %>
                 <div id="admin_links">
