--- a/app/views/reviews/_post_reviews.html.erb
+++ b/app/views/reviews/_post_reviews.html.erb
@@ -11,7 +11,7 @@
         Review #<%= @reviews.count - (index) %> given by <%= link_to(@editor.try(:full_name), @editor, :class => "link_nrml", :target => "_blank") %> on <%= review.updated_at.strftime("%D") %>
         <% if current_user.editor? %>
           <%= link_to review_path(review), method: :delete, :data => {confirm: "Are you sure you want to delete this review?"} do %>
-            <i class="fa fa-times" style="color: black;"></i>
+            <svg style="color: black;" width="14px" height="14px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" class="svg-inline--fa fa-times fa-w-11" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 352 512"><path fill="currentColor" d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"></path></svg>
           <% end %>
         <% end %>
       </div>
