--- a/app/views/users/onboarding/next_steps_partials/_pitches.html.erb
+++ b/app/views/users/onboarding/next_steps_partials/_pitches.html.erb
@@ -1,7 +1,7 @@
 <div class="flex-wrapper" style="margin: 0 auto 40px auto;">
   <% pitches.each do |pitch| %>
     <%= link_to pitch_modal_path(:id => pitch.id), method: :patch, remote: true, class: "card", style: "width: 32%;", id: "pitch-#{pitch.id}" do %>
-      <i style="color: #F0255E;" class="fas fa-check-circle fa-2x abs-right-corner hide"></i>
+      <svg style="color: #F0255E;" width="22px" height="22px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="check-circle" class="abs-right-corner hide mb-1 svg-inline--fa fa-check-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"></path></svg>
       <div>
         <%=image_tag(pitch.thumbnail.url(:card), alt: pitch.title, :class => "card-img-top")%>
         <div class="card-body">
