--- a/app/views/users/share.html.erb
+++ b/app/views/users/share.html.erb
@@ -30,7 +30,8 @@
                    </div>
                    <% if draft.promoting_until.present? && draft.promoting_until > Time.now %>
                      <div class="rounded-bottom rgba-red-strong lighten-3 text-right p-3">
-                       <p class="list-inline-item pr-2 white-text"><i class="fas fa-fire"></i> Promoting ends in <%= time_ago_in_words(draft.promoting_until) %></p>
+                       <p class="list-inline-item pr-2 white-text">
+                         <svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="fire" class="svg-inline--fa fa-fire fa-w-12" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path fill="currentColor" d="M216 23.86c0-23.8-30.65-32.77-44.15-13.04C48 191.85 224 200 224 288c0 35.63-29.11 64.46-64.85 63.99-35.17-.45-63.15-29.77-63.15-64.94v-85.51c0-21.7-26.47-32.23-41.43-16.5C27.8 213.16 0 261.33 0 320c0 105.87 86.13 192 192 192s192-86.13 192-192c0-170.29-168-193-168-296.14z"></path></svg> Promoting ends in <%= time_ago_in_words(draft.promoting_until) %></p>
                      </div>
                    <% else %>
                      <%= form_for draft do |f| %>
