javascript bug fix

--- a/app/assets/stylesheets/mdbootstrap/templates/landing-page.html
+++ b/app/assets/stylesheets/mdbootstrap/templates/landing-page.html
@@ -291,7 +291,7 @@
               <!--Content-->
               <h4 class="font-weight-bold mt-4 mb-3">Anna Deynah</h4>
               <h6 class="mb-3 font-weight-bold grey-text">Web Designer</h6>
-              <p><svg width="14px" height="14px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="quote-left" class="mb-1 svg-inline--fa fa-quote-left fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6 32 0 103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z"></path></svg></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos
+              <p><svg width="14px" height="14px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="quote-left" class="mb-1 svg-inline--fa fa-quote-left fa-w-16" role="img" viewBox="0 0 512 512"><path fill="currentColor" d="M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6 32 0 103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z"></path></svg></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos
                 id officiis hic tenetur quae quaerat ad velit ab hic tenetur.</p>
 
               <!--Review-->
@@ -317,7 +317,7 @@
               <!--Content-->
               <h4 class="font-weight-bold mt-4 mb-3">John Doe</h4>
               <h6 class="mb-3 font-weight-bold grey-text">Web Developer</h6>
-              <p><svg width="14px" height="14px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="quote-left" class="mb-1 svg-inline--fa fa-quote-left fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6 32 0 103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z"></path></svg></i> Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis
+              <p><svg width="14px" height="14px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="quote-left" class="mb-1 svg-inline--fa fa-quote-left fa-w-16" role="img" viewBox="0 0 512 512"><path fill="currentColor" d="M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6 32 0 103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z"></path></svg></i> Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis
                 suscipit laboriosam, nisi ut aliquid ex ea commodi.</p>
 
               <!--Review-->
@@ -342,7 +342,7 @@
               <!--Content-->
               <h4 class="font-weight-bold mt-4 mb-3">Maria Kate</h4>
               <h6 class="mb-3 font-weight-bold grey-text">Photographer</h6>
-              <p><svg width="14px" height="14px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="quote-left" class="mb-1 svg-inline--fa fa-quote-left fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6 32 0 103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z"></path></svg></i> At vero eos et accusamus et iusto odio dignissimos ducimus qui
+              <p><svg width="14px" height="14px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="quote-left" class="mb-1 svg-inline--fa fa-quote-left fa-w-16" role="img" viewBox="0 0 512 512"><path fill="currentColor" d="M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6 32 0 103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z"></path></svg></i> At vero eos et accusamus et iusto odio dignissimos ducimus qui
                 blanditiis praesentium voluptatum deleniti atque corrupti.</p>
 
               <!--Review-->
