--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -41,6 +41,10 @@
   display: inline !important;
 }
 
+.adtester-container-125 {
+  min-height: 0px !important;
+}
+
 .white-text {
   color: white !important;
 }
@@ -374,7 +378,7 @@ html, body {
   left: -320px;
   background: white;
   position: fixed;
-  padding: 18px 30px;
+  padding: 20px 30px;
   z-index: 1000005;
   a, h2 {
     width: fit-content;
@@ -583,7 +587,7 @@ hr {
         font-family: "Playfair Display";
         margin: 0;
         font-weight: 400;
-        line-height: 1.1;
+        line-height: 0.8;
         position: relative;
         top: -5px;
         a {
