--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -14,7 +14,7 @@
   </i></p>
   <% if @most_recent_review.try(:status).eql? "Rejected" %>
     <% if !@most_recent_review.notes.blank? %>
-     <p><i style="background-color: #FCD04D;">Editor Notes: <%= @most_recent_review.notes %></i></p>
+     <p><i>Editor Notes: <%= @most_recent_review.notes %></i></p>
     <% end %>
     <% if @requested_changes.present? %>
       <div class="card mb-3 changes_requested">
