--- a/app/views/pages/editor_partials/_start_content.html.erb
+++ b/app/views/pages/editor_partials/_start_content.html.erb
@@ -4,8 +4,8 @@ and we are so happy that you applied to join this team of talented student write
 and we truly want to thank you for all the time and devotion we've seen you put into being a writer, and now editor, for TTM.</p>
 <h4>As an Editor for The Teen Magazine:</h4>
 <ul>
-  <li>You will be expected to remain an active member of our writer community and complete 10 new pitches and review at least 8 submitted articles every month. Reviews encompass any time that you move an article to "In Review" and either
-  reject it with requested changes or approve it for publishing (more info in <a target="_blank" href="/article-requirements"><b>Reviewing Articles</b></a>).
+  <li>You will be expected to remain an active member of our writer community and complete <b><%= @pitches_requirement %></b> new pitches and review <b><%= @reviews_requirement %></b> submitted articles every month. Reviews encompass any time that you move an article to "In Review" and either
+  reject it with requested changes or approve it for publishing (more info in <a target="_blank" href="/article-requirements"><b>Reviewing Articles</b></a>). The max number of reviews an editor can complete per month is <b><%= @max_reviews %></b>. These numbers may change as writers become more or less active. If there are any changes, you will be notified via email. Your editor dashboard and the editor documentation will always reflect the current month's requirements which is set by an admin.
   <li>You will receive your own <a target="_blank" href="/editors/<%= current_user.slug %>"><b>Editor Dashboard</b></a> along with your updated <a target="_blank" href="<%= user_path(id: current_user.slug, mode: 'public') %>"><b>Editor Profile</b></a> which will keep track of how many writers you've directly helped at The Teen Magazine.
   <li>You will be able to view all writers and accept submitted profiles.</li>
 </ul>
