--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -47,6 +47,13 @@ a {
   }
 }
 
+.underline {
+  text-decoration: underline !important;
+  &:hover {
+    text-decoration: underline !important;
+  }
+}
+
 .tooltip-inner {
   background-color: black !important;
 }
