--- a/app/views/users/dashboard/_new_writer.html.erb
+++ b/app/views/users/dashboard/_new_writer.html.erb
@@ -34,7 +34,7 @@
             <li class="<% if @has_completed_onboarding %>strikethrough<% end %>">Complete the onboarding process.</li>
             <li class="<% if @has_submitted_profile %>strikethrough<% end %>">Submit your profile.</li>
             <li class="<% if @has_claimed_pitch %>strikethrough<% end %>">Claim your first article pitch.</li>
-            <li class="<% if @has_read_resources %>strikethrough<% end %>">Read all of <a target="_blank" href="/choosing-a-topic" class="link_nrml" style="font-family: inherit; text-decoration: underline;">Pitching an Article</a>, <a target="_blank" href="/writing-the-perfect-article" class="link_nrml" style="font-family: inherit; text-decoration: underline;">Writing the Perfect Article</a>, and <a target="_blank" href="/finding-images" class="link_nrml underline" style="font-family: inherit; text-decoration: underline;">Finding Images</a>.</li>
+            <li class="<% if @has_read_resources %>strikethrough<% end %>">Read all of <a target="_blank" href="/choosing-a-topic" class="link_nrml underline" style="font-family: inherit;">Pitching an Article</a>, <a target="_blank" href="/writing-the-perfect-article" class="link_nrml underline" style="font-family: inherit;">Writing the Perfect Article</a>, and <a target="_blank" href="/finding-images" class="link_nrml underline" style="font-family: inherit;">Finding Images</a>.</li>
             <li class="<% if @has_submitted_first_draft %>strikethrough<% end %>">Submit your first draft.</li>
             <li class="<% if @has_published %>strikethrough<% end %>">Have a draft get approved for publication.</li>
           </ol>
