fixed formatting problems on save

--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -3,8 +3,7 @@ pintrk('track', 'pagevisit');
 </script>
 
 <!-- let someone create an application; sends to editor -->
-<div id="apply_image">
-</div>
+<div id="apply_image"></div>
 <div class="apply_wrapper">
   <h2>Apply to The Teen Magazine Writer Team</h2>
   <p>
